--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,13 +4,13 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
-dependencies = [
-    "fastapi>=0.115.12",
-    "uvicorn[standard]>=0.34.2",
-]
+dependencies = ["fastapi>=0.115.12", "uvicorn[standard]>=0.34.2"]
 
 [dependency-groups]
-dev = [
-    "ipython>=9.2.0",
-    "ptpython>=3.0.30",
-]
+dev = ["ipython>=9.2.0", "ptpython>=3.0.30"]
+
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+[tool.hatch.build.targets.wheel]
+packages = ["app"]
