--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,11 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
-dependencies = ["fastapi>=0.115.12", "uvicorn[standard]>=0.34.2"]
+dependencies = [
+    "fastapi>=0.115.12",
+    "software-engineering-lab>=0.1.0",
+    "uvicorn[standard]>=0.34.2",
+]
 
 [dependency-groups]
 dev = ["ipython>=9.2.0", "ptpython>=3.0.30"]
@@ -14,3 +18,6 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 [tool.hatch.build.targets.wheel]
 packages = ["app"]
+
+[tool.uv.sources]
+software-engineering-lab = { git = "https://github.com/ulic-youthlic/Software_Engineering_Lab", branch = "dev" }
