chore: Add ursina deps for game environment

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "mss>=10.0.0",
     "opencv-python>=4.11.0.86",
     "software-engineering-lab>=0.1.0",
+    "ursina>=7.0.0",
     "uvicorn[standard]>=0.34.2",
 ]
 
