--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "fastapi>=0.115.12",
     "mss>=10.0.0",
     "opencv-python>=4.11.0.86",
+    "python-multipart>=0.0.20",
     "software-engineering-lab>=0.1.0",
     "ursina>=7.0.0",
     "uvicorn[standard]>=0.34.2",
